--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.17
+          go-version: 1.18
       - name: Display go version
         run: go version
       - name: install tparse
@@ -25,6 +25,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: "github.com/dymensionxyz/*"
+      GH_ACCESS_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
     strategy:
       matrix:
         go-arch: ["amd64", "arm", "arm64"]
@@ -32,7 +35,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.17
+          go-version: 1.18
+      - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - uses: technote-space/get-diff-action@v4
         id: git_diff
         with:
@@ -45,11 +49,15 @@ jobs:
 
   test-cosmovisor:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: "github.com/dymensionxyz/*"
+      GH_ACCESS_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.17
+          go-version: 1.18
+      - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - name: Display go version
         run: go version
       - uses: technote-space/get-diff-action@v4
@@ -93,6 +101,9 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: "github.com/dymensionxyz/*"
+      GH_ACCESS_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
     needs: split-test-files
     strategy:
       fail-fast: false
@@ -102,7 +113,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.17
+          go-version: 1.18
+      - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - uses: technote-space/get-diff-action@v4
         with:
           PATTERNS: |
@@ -171,6 +183,9 @@ jobs:
 
   test-race:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: "github.com/dymensionxyz/*"
+      GH_ACCESS_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
     needs: split-test-files
     strategy:
       fail-fast: false
@@ -180,7 +195,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.17
+          go-version: 1.18
+      - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - uses: technote-space/get-diff-action@v4
         with:
           PATTERNS: |
@@ -219,12 +235,16 @@ jobs:
 
   liveness-test:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: "github.com/dymensionxyz/*"
+      GH_ACCESS_TOKEN: "${{ secrets.GH_ACCESS_TOKEN }}"
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.17
+          go-version: 1.18
+      - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - uses: technote-space/get-diff-action@v4
         id: git_diff
         with:
